# svarog_grouped

./: .gitignore  Makefile  TODO.md  go.work
examples/: sdk_examples.mk  service_examples.mk
examples/mpctest/: go.mod
examples/mpctest/manager_cli/: manager.go
examples/mpctest/peer_cli/: peer.go
examples/mpctest/proto/: svarog.pb.go  svarog_grpc.pb.go
examples/sdk_examples/: Cargo.toml  Makefile  keygen_main.rs  keygen_mnem_main.rs  new_session.rs  reshare_main.rs  sign_main.rs
examples/service_examples/: .gitignore  Makefile  go.mod  go.sum
examples/service_examples/manager_example/: main.go
examples/service_examples/peer_example/: main.go
patches/curv-kzen-0.9.0/: .cargo_vcs_info.json  Cargo.toml
patches/curv-kzen-0.9.0/src/elliptic/curves/: curve_ristretto.rs  p256.rs  secp256_k1.rs
patches/kzen-paillier-0.4.2/: Cargo.toml
svarog_grpc/: .gitignore  Cargo.toml  Makefile
svarog_grpc/proto/: HOW_TO.md  svarog.proto
svarog_grpc/protoc_rust/: Cargo.toml  main.rs
svarog_grpc/src/: lib.rs
svarog_grpc/src/protogen/: mod.rs  svarog.rs
svarog_manager/: Makefile  go.mod  go.sum  main.go
svarog_manager/bizlogic/: init.go  models.go  rpc_impl.go
svarog_manager/util/: util.go
svarog_mpc_sdk/: Cargo.toml  Makefile
svarog_mpc_sdk/patches/: curv-kzen.patch
svarog_mpc_sdk/patches/mp-ecdsa-184c49fa/: Cargo.toml
svarog_mpc_sdk/patches/mp-ecdsa-184c49fa/src/protocols/: mod.rs
svarog_mpc_sdk/patches/mp-ecdsa-184c49fa/src/protocols/multi_party_ecdsa/: mod.rs
svarog_mpc_sdk/src/: lib.rs  main.rs  mpc_member.rs  util.rs
svarog_mpc_sdk/src/algo/: gg18.rs  keygen.rs  keystore.rs  mod.rs  sign.rs  test.rs
svarog_mpc_sdk/src/algo/data_structure/: keystore.rs  mod.rs  signature.rs
svarog_mpc_sdk/src/algo/mta/: dlog_proof.rs  mod.rs  nizk_rsa.rs  primes.rs  primes_old.rs  range_proofs.rs  sampling.rs  sha.rs  test.rs
svarog_mpc_sdk/src/algo/paillier_proof/: nizk_blum.rs  nizk_nsf.rs
svarog_mpc_sdk/src/biz_algo/: hd.rs  keygen.rs  keygen_mnem.rs  keystore.rs  mod.rs  reshare.rs  sign.rs
svarog_mpc_sdk/src/examples/: generate_prime.rs  generate_rgp.rs  keygen_main.rs  keygen_mnem_main.rs  new_session.rs  reshare_main.rs  sign_main.rs
svarog_mpc_sdk/src/gg18/: feldman_vss.rs  hd.rs  keygen.rs  keygen_mnem.rs  keystore.rs  mod.rs  mta.rs  multi_party_ecdsa.rs  pubkey.rs  reshare.rs  sign.rs
svarog_mpc_sdk/src/mta/: dlog_proof.rs  mod.rs  nizk_rsa.rs  primes.rs  range_proofs.rs  sampling.rs  sha.rs
svarog_mpc_sdk/src/paillier_proof/: mod.rs  nizk_blum.rs  nizk_nsf.rs  primes.rs
svarog_mpc_sdk/src/protogen/: server.rs
svarog_peer/: Cargo.toml  Makefile
svarog_peer/patches/: curv-kzen.patch
svarog_peer/src/: config.rs  main.rs  peer_main.rs  role.rs  svarog_peer.rs
svarog_peer/src/biz_spawn/: biz.rs  mod.rs  sql.rs
svarog_tests/: Makefile  go.mod  go.sum  testAlarm.go  testKeygenAttend.go  testKeygenNew.go  testKeygenTerminate.go  testPollProgress.go  testSignAttend.go  testSignNew.go
