[package]
name = "svarog_mpc_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.9", features = ["std"] }
anyhow = { version = "1.0", features = ["backtrace", "std"] }
bip32 = { version = "0.5", features = ["secp256k1", "alloc"] }
bitcoin = { version = "0.29", features = ["serde"] }
centipede = { version = "0.3", default_features = false }
chrono = "0.4"
clap = { version = "4.3", features = ["derive"] }
hex = "0.4"
hmac = { version = "0.11.0", features = ["std"] }
itertools = "0.10"
miniz_oxide = "0.7"
prost = "0.11.9"
prost-types = "0.11.9"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny-bip39 = "1"                                                # provides bip39::*, not equivalent to crate `bip39`
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.10", features = ["gzip", "channel"] }
zk-paillier = { version = "0.4.3", default_features = false }
secp256k1 = { version = "0.28", features = ["global-context"] }
sha3 = "0.10.8"
num-bigint = { version = "0.4.4", features = ["serde"] }
rand = "0.8.5"
zeroize = "1.7.0"

[dependencies.curv-kzen]
version = "0.9.0"
# path = "patches/curv-kzen-0.9.0"
default-features = false
features = ["num-bigint"]

[dependencies.k256]
version = "0.12.0"
features = ["arithmetic", "serde", "ecdsa", "ecdsa-core"]

[dependencies.svarog_grpc]
path = "../svarog_grpc"

[dependencies.paillier]
package = "kzen-paillier"
version = "0.4.2"         # compatible with curv-kzen-0.9.0
default-features = false

[dependencies.sha2]
# Winston: Do not use 0.10.z! Otherwise you'll encounter hundreds of trait compilation errors.
# version = "0.10.6"
version = "0.9.9"
default-features = false

[profile.release]
opt-level = 3
# lto = true
# codegen-units = 1
# strip = true

# Any dependencies that depend on curv-kzen-0.9.0 will use this patched version.
# Thus we no longer need to "download the dependencies and modify their Cargo.toml".
[patch.crates-io]
curv-kzen = { version = "0.9.0", path = "../patches/curv-kzen-0.9.0" }
