[package]
name = "svarog_peer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10"
clap = { version = "4.3", features = ["derive"] }
hex = "0.4"
prost = "0.11.9"
prost-types = "0.11.9"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
tonic = { version = "0.10", features = ["gzip", "channel"] }
tokio = { version = "1", features = ["full"] }

[dependencies.svarog_grpc]
path = "../svarog_grpc"

[dependencies.svarog_mpc_sdk]
path = "../svarog_mpc_sdk"

[dependencies.xuanmi_base_support]
git = "ssh://git@github.com/taiyi-research-institute/xuanmi_base_support"
branch = "main"

[profile.release]
opt-level = 3
# lto = true
# codegen-units = 1
# strip = true

# Any dependencies that depend on curv-kzen-0.9.0 will use this patched version.
# Thus we no longer need to "download the dependencies and modify their Cargo.toml".
[patch.crates-io] 
curv-kzen = { version = "0.9.0", path = "../patches/curv-kzen-0.9.0" }