[package]
name = "svarog_mpc_sdk_examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "keygen_main"
path = "keygen_main.rs"

[[bin]]
name = "sign_main"
path = "sign_main.rs"

[[bin]]
name = "keygen_mnem_main"
path = "keygen_mnem_main.rs"

[[bin]]
name = "reshare_main"
path = "reshare_main.rs"

[[bin]]
name = "new_session"
path = "new_session.rs"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
itertools = "0.10"
hex = "*"
prost = "0.11.9"
prost-types = "0.11.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.10", features = ["gzip", "channel"] }

[dependencies.svarog_grpc]
path = "../../svarog_grpc"

[dependencies.svarog_mpc_sdk]
path = "../../svarog_mpc_sdk"

[profile.release]
opt-level = 3
# lto = true
# codegen-units = 1
# strip = true

# Any dependencies that depend on curv-kzen-0.9.0 will use this patched version.
# Thus we no longer need to "download the dependencies and modify their Cargo.toml".
[patch.crates-io]
curv-kzen = { version = "0.9.0", path = "../../patches/curv-kzen-0.9.0" }
