[workspace]

[package]
name = "protoc_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "protoc_rust"
path = "main.rs"

[dependencies]
clap = "4.3.23"
glob = "0.3.1"
tonic-build = { version = "0.10", features = ["prost"] }

[dependencies.xuanmi_base_support]
# git = "ssh://git@github.com/taiyi-research-institute/xuanmi_base_support"
git = "ssh://git@github.com/taiyi-research-institute/xuanmi_base_support"
branch = "main"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
